@tool
extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
    %dayprogress1.day = "一"
    %dayprogress2.day = "二"
    %dayprogress3.day = "三"
    %dayprogress4.day = "四"
    %dayprogress5.day = "五"
    %dayprogress6.day = "六"
    %dayprogress7.day = "日"


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
    pass
